--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <li> Gaming</li>
     </ul>
     <hr>
-    <a href="Contact.html">Contact Us</a>
+    <a href="contact.html">Contact Us</a>
     </body>
 </html>
  
