--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <td>2019</td>
         </tr>
         <tr>
-          <td>HSE(Computer Science)</td>
+          <td>HSC</td>
           <td>BMHSS Uppatty</td>
           <td>STATE</td>
           <td>2016</td>
